fix: use grep -E instead of deprecated egrep
From grep(1):

       In addition, the variant programs egrep and fgrep are the same as
       grep -E and grep -F, respectively. These variants are deprecated,
       but are provided for backward compatibility.

Made using:
    git grep -l egrep docs .github linux_os|xargs -r \
        sed -Ei 's/egrep -/grep -E/g;s/egrep /grep -E /g'

--- a/.github/workflows/gate.yaml
+++ b/.github/workflows/gate.yaml
@@ -168,7 +168,7 @@ jobs:
         with:
           coverageLocations: build/tests/coverage.xml:coverage.py
       - name: Validate gitmailmap
-        run: egrep "\S" .mailmap | egrep -v '^#' | git check-mailmap --stdin
+        run: grep -E "\S" .mailmap | grep -Ev '^#' | git check-mailmap --stdin
 
   validate-fedora-rawhide:
     name: Build, Test on Fedora Rawhide (Container)
