--- a/linux_os/guide/system/software/sudo/sudoers_validate_passwd/policy/stig/shared.yml
+++ b/linux_os/guide/system/software/sudo/sudoers_validate_passwd/policy/stig/shared.yml
@@ -8,7 +8,7 @@ vuldiscussion: |-
 checktext: |-
     Verify that the sudoers security policy is configured to use the invoking user's password for privilege escalation with the following command:
 
-    $ sudo egrep -i '(!rootpw|!targetpw|!runaspw)' /etc/sudoers /etc/sudoers.d/* | grep -v '#'
+    $ sudo grep -Ei '(!rootpw|!targetpw|!runaspw)' /etc/sudoers /etc/sudoers.d/* | grep -v '#'
 
     /etc/sudoers:Defaults !targetpw
     /etc/sudoers:Defaults !rootpw
