--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_usergroup_modification_group/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_usergroup_modification_group/rule.yml
@@ -75,7 +75,7 @@ ocil_clause: 'the command does not return a line, or the line is commented out'
 ocil: |-
     Verify {{{ full_name }}} generates audit records for all account creations, modifications, disabling, and termination events that affect "/etc/group" with the following command:
 
-    $ sudo auditctl -l | egrep '(/etc/group)'
+    $ sudo auditctl -l | grep -E '(/etc/group)'
 
     -w /etc/group -p wa -k identity
 
