--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_usergroup_modification_passwd/policy/stig/shared.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_usergroup_modification_passwd/policy/stig/shared.yml
@@ -9,7 +9,7 @@ vuldiscussion: |-
 checktext: |-
     Verify {{{ full_name }}} generates audit records for all account creations, modifications, disabling, and termination events that affect "/etc/passwd" with the following command:
 
-    $  sudo auditctl -l | egrep '(/etc/passwd)'
+    $  sudo auditctl -l | grep -E '(/etc/passwd)'
 
     -w /etc/passwd -p wa -k identity
 
