--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_usergroup_modification_shadow/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_usergroup_modification_shadow/rule.yml
@@ -75,7 +75,7 @@ ocil_clause: 'command does not return a line, or the line is commented out'
 ocil: |-
     Verify {{{ full_name }}} generates audit records for all account creations, modifications, disabling, and termination events that affect "/etc/passwd with the following command:
 
-    $  sudo auditctl -l | egrep '(/etc/shadow)'
+    $  sudo auditctl -l | grep -E '(/etc/shadow)'
 
     -w /etc/shadow -p wa -k identity
 
