--- a/linux_os/guide/system/network/network-kernel/network_host_parameters/sysctl_net_ipv4_conf_default_send_redirects/policy/stig/shared.yml
+++ b/linux_os/guide/system/network/network-kernel/network_host_parameters/sysctl_net_ipv4_conf_default_send_redirects/policy/stig/shared.yml
@@ -22,7 +22,7 @@ checktext: |-
 
     Check that the configuration files are present to enable this network parameter.
 
-    $  sudo /usr/lib/systemd/systemd-sysctl --cat-config | egrep -v '^(#|;)' | grep -F net.ipv4.conf.default.send_redirects | tail -1
+    $  sudo /usr/lib/systemd/systemd-sysctl --cat-config | grep -Ev '^(#|;)' | grep -F net.ipv4.conf.default.send_redirects | tail -1
 
     net.ipv4.conf.default.send_redirects = 0
 
