--- a/linux_os/guide/system/permissions/files/sysctl_fs_protected_hardlinks/policy/stig/shared.yml
+++ b/linux_os/guide/system/permissions/files/sysctl_fs_protected_hardlinks/policy/stig/shared.yml
@@ -17,7 +17,7 @@ checktext: |-
 
     Check that the configuration files are present to enable this kernel parameter.
 
-    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | egrep -v '^(#|;)' |  grep -F fs.protected_hardlinks | tail -1
+    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | grep -Ev '^(#|;)' |  grep -F fs.protected_hardlinks | tail -1
 
     fs.protected_hardlinks = 1
 
