--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_core_pattern/policy/stig/shared.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_core_pattern/policy/stig/shared.yml
@@ -17,7 +17,7 @@ checktext: |-
 
     Check that the configuration files are present to disable core dump storage.
 
-    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | egrep -v '^(#|;)' | grep -F kernel.core_pattern | tail -1
+    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | grep -Ev '^(#|;)' | grep -F kernel.core_pattern | tail -1
 
     kernel.core_pattern = |/bin/false
 
