--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_kexec_load_disabled/policy/stig/shared.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_kexec_load_disabled/policy/stig/shared.yml
@@ -19,7 +19,7 @@ checktext: |-
 
     Check that the configuration files are present to enable this kernel parameter with the following command:
 
-    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | egrep -v '^(#|;)' | grep -F kernel.kexec_load_disabled | tail -1
+    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | grep -Ev '^(#|;)' | grep -F kernel.kexec_load_disabled | tail -1
 
     kernel.kexec_load_disabled = 1
 
