--- a/linux_os/guide/system/permissions/restrictions/sysctl_net_core_bpf_jit_harden/policy/stig/shared.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_net_core_bpf_jit_harden/policy/stig/shared.yml
@@ -17,7 +17,7 @@ checktext: |-
 
     Check that the configuration files are present to enable this kernel parameter.
 
-    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | egrep -v '^(#|;)' | grep -F net.core.bpf_jit_harden | tail -1
+    $ sudo /usr/lib/systemd/systemd-sysctl --cat-config | grep -Ev '^(#|;)' | grep -F net.core.bpf_jit_harden | tail -1
     net.core.bpf_jit_harden = 2
 
     If the network parameter "net.core.bpf_jit_harden" is not equal to "2" or nothing is returned, this is a finding.
