Assign network_implement_access_control to firewalld component

--- a/components/firewalld.yml
+++ b/components/firewalld.yml
@@ -12,6 +12,7 @@ rules:
 - firewalld-backend
 - firewalld_loopback_traffic_restricted
 - firewalld_loopback_traffic_trusted
+- network_implement_access_control
 - package_firewalld_installed
 - package_firewalld_removed
 - service_firewalld_disabled
