--- a/linux_os/guide/services/ntp/service_chronyd_or_ntpd_enabled/rule.yml
+++ b/linux_os/guide/services/ntp/service_chronyd_or_ntpd_enabled/rule.yml
@@ -47,6 +47,7 @@ identifiers:
     cce@sle15: CCE-85835-7
 
 references:
+    anssi: BP28(R71)
     cis-csc: 1,14,15,16,3,5,6
     cis@rhel8: 2.2.1.1
     cobit5: APO11.04,BAI03.05,DSS05.04,DSS05.07,MEA02.01
