OCP4: Fix group ownerships checks
Commit
https://github.com/ComplianceAsCode/content/pull/10622/files#diff-e470af0c0d17a583faf9a1633cebb168a90bb3cc63264e5444c981c6614cb6feR59
changed the way the file_groupowner template works, but there was an
issue with the platform selection logic - the condition that looks at
/usr/lib/group instead of /etc/groups must be matched for ocp4 as well
as rhcos4.

In addition, this PR changes the checks for different OVN files to match
on group name, not GID.

--- a/applications/openshift/master/file_groupowner_ovs_sys_id_conf_not_s390x/rule.yml
+++ b/applications/openshift/master/file_groupowner_ovs_sys_id_conf_not_s390x/rule.yml
@@ -35,4 +35,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/openvswitch/system-id.conf
-        filegid: '801'
+        filegid: 'hugetlbfs'
