--- a/controls/cis_ocp_1_3_0/section-1.yml
+++ b/controls/cis_ocp_1_3_0/section-1.yml
@@ -329,8 +329,12 @@ controls:
     controls:
     - id: 1.3.1
       title: Ensure that garbage collection is configured as appropriate
-      status: partial
-      rules: [] 
+      status: Completed
+      rules:
+        - kubelet_eviction_thresholds_set_hard_memory_available
+        - kubelet_eviction_thresholds_set_hard_nodefs_available
+        - kubelet_eviction_thresholds_set_hard_nodefs_inodesfree
+        - kubelet_eviction_thresholds_set_hard_imagefs_available 
       tickets:
         - https://issues.redhat.com/browse/CMP-1977
       notes:  |-
