--- a/linux_os/guide/services/ssh/file_groupownership_sshd_private_key/rule.yml
+++ b/linux_os/guide/services/ssh/file_groupownership_sshd_private_key/rule.yml
@@ -3,6 +3,7 @@ documentation_complete: true
 title: 'Verify Group Ownership on SSH Server Private *_key Key Files'
 
 {{% set dedicated_ssh_groupname = groups.get("dedicated_ssh_keyowner", {}).get("name") %}}
+{{% set dedicated_ssh_groupid = groups.get("dedicated_ssh_keyowner", {}).get("id") %}}
 
 description: |-
     SSH server private keys, files that match the <code>/etc/ssh/*_key</code> glob, must be
@@ -35,4 +36,4 @@ template:
             - /etc/ssh/
         file_regex:
             - ^.*_key$
-        filegid: '{{{ dedicated_ssh_groupname if dedicated_ssh_groupname else '0' }}}'
+        filegid: '{{{ dedicated_ssh_groupid if dedicated_ssh_groupid else '0' }}}'
