--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1026,14 +1026,14 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # missing rule
+    status: pending # missing rule
 
   - id: 3.5.1.3
     title: Ensure nftables either not installed or masked with firewalld (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.1.4
     title: Ensure firewalld service enabled and running (Automated)
@@ -1078,21 +1078,21 @@ controls:
     - l1_workstation
     notes: <-
       CIS benchmark allows to choose from several firewall applications. This interpretation of the benchmark chose the Firewalld application and other subsections are not automated.
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.2.2
     title: Ensure firewalld is either not installed or masked with nftables (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.2.3
     title: Ensure iptables-services not installed with nftables (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.2.4
     title:  Ensure iptables are flushed with nftables (Manual)
@@ -1119,14 +1119,14 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.2.7
     title: Ensure nftables loopback traffic is configured (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.2.8
     title: Ensure nftables outbound and established connections are configured (Manual)
@@ -1162,14 +1162,14 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.1.1
     title: Ensure iptables packages are installed (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no
+    status: pending
     notes: <-
       CIS benchmark allows to choose from several firewall applications. This interpretation of the benchmark chose the Firewalld application and other subsections are not automated.
     related_rules:
@@ -1180,21 +1180,21 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.1.3
     title: Ensure firewalld is either not installed or masked with iptables
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.2.1
     title: Ensure iptables loopback traffic is configured (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.2.2
     title: Ensure iptables outbound and established connections are configured (Manual)
@@ -1228,14 +1228,14 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.2.6
     title: Ensure iptables is enabled and running (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no
+    status: pending
     related_rules:
     - service_iptables_enabled
 
@@ -1244,7 +1244,7 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.3.2
     title: Ensure ip6tables outbound and established connections are configured (Manual)
@@ -1278,14 +1278,14 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: pending # rule missing
 
   - id: 3.5.3.3.6
     title: Ensure ip6tables is enabled and running (Automated)
     levels:
     - l1_server
     - l1_workstation
-    automated: no
+    status: pending
     related_rules:
     - service_ip6tables_enabled
 
@@ -1503,7 +1503,7 @@ controls:
     levels:
     - l2_server
     - l2_workstation
-    automated: no # missing rule
+    status: pending # missing rule
 
   - id: 4.1.16
     title: Ensure kernel module loading and unloading is collected (Automated)
@@ -2006,7 +2006,7 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # we can check only certain parts, we need probably some complex rule for this
+    status: pending # we can check only certain parts, we need probably some complex rule for this
 
   - id: 5.4.3
     title: Ensure password hashing algorithm is SHA-512 (Automated)
