--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1503,7 +1503,9 @@ controls:
     levels:
     - l2_server
     - l2_workstation
-    status: pending # missing rule
+    status: automated
+    rules:
+      - audit_rules_suid_privilege_function
 
   - id: 4.1.16
     title: Ensure kernel module loading and unloading is collected (Automated)
