--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_suid_privilege_function/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_suid_privilege_function/rule.yml
@@ -48,6 +48,7 @@ identifiers:
     cce@sle15: CCE-85611-2
 
 references:
+    cis@rhel7: 4.1.15
     cis@rhel8: 4.1.3.2
     cis@rhel9: 4.1.3.2
     cis@ubuntu2004: 4.1.15
